[tool.poetry]
name = "api-py"
version = "0.1.0"
description = "Python client library for the Voxel51 Platform API."
authors = ["Voxel51, Inc. <support@voxel51.com>"]
license = "BSD-4-Clause"

[tool.poetry.dependencies]
python = "^2.7 || ^3"
argcomplete = "^1.11.0"
future = "^0.18.2"
futures = "^3.3.0"
python-dateutil = "^2.8.1"
requests = "^2.22.0"
requests-toolbelt = "^0.9.1"
six = "^1.13.0"
tabulate = "^0.8.6"
tzlocal = "^2.0.0"

[tool.poetry.dev-dependencies]
m2r = "^0.2.1"
pycodestyle = "^2.5.0"
pylint = "^2.4.4"
sphinx = "^2.3.1"
sphinx-rtd-theme = "^0.4.3"
sphinxcontrib-napoleon = "^0.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
